--- a/public/signIn.html
+++ b/public/signIn.html
@@ -47,7 +47,7 @@
           password: password.value,
         };
 
-        let request = await fetch(`https://authentication--adarshsharma41.repl.co/api/v1/signin`, {
+        let request = await fetch("http://127.0.0.1:5500/Authentication/public/api/v1/signIn", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
