--- a/public/signUp.html
+++ b/public/signUp.html
@@ -63,7 +63,7 @@
           password: password.value,
         };
 
-        let request = await fetch("http://127.0.0.1:5500/Authentication/public/api/v1/signUp", {
+        let request = await fetch(`${BASE_URL}/api/v1/signUp`, {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
